5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1674_1100.log
== SUBMITION (2019-04-25 11:45:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: ", Tartaruga)
elif (x==5):
	print("Entrada: ", x)
	print("Animal: ", Garca)
elif (x==10):
	print("Entrada: ", x)
	print("Animal: ", Arara)
elif (x==20):
	print("Entrada: ", x)
	print("Animal: ", Mico-leao-dourado)
elif (x==50):
	print("Entrada: ", x)
	print("Animal: ", Onca-pintada)
elif (x==100):
	print("Entrada: ", x)
	print("AQnimal: ", Garoupa)
else:
	print("Entrada: ", x)
	print("Animal: ", invalido)
-- EXECUTION TIME:
0.156135
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1100/main.py", line 23, in <module>
    print("AQnimal: ", Garoupa)
NameError: name 'Garoupa' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:45:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: ", Tartaruga)
elif (x==5):
	print("Entrada: ", x)
	print("Animal: ", Garca)
elif (x==10):
	print("Entrada: ", x)
	print("Animal: ", Arara)
elif (x==20):
	print("Entrada: ", x)
	print("Animal: ", Mico-leao-dourado)
elif (x==50):
	print("Entrada: ", x)
	print("Animal: ", Onca-pintada)
elif (x==100):
	print("Entrada: ", x)
	print("AQnimal: ", Garoupa)
else:
	print("Entrada: ", x)
	print("Animal: ", invalido)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print("AQnimal: ", Garoupa)
NameError: name 'Garoupa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:47:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: Tartaruga")
elif (x==5):
	print("Entrada: ", x)
	print("Animal: Garca")
elif (x==10):
	print("Entrada: ", x)
	print("Animal: Arara")
elif (x==20):
	print("Entrada: ", x)
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Entrada: ", x)
	print("Animal: Onca-pintada")
elif (x==100):
	print("Entrada: ", x)
	print("AQnimal: Garoupa")
else:
	print("Entrada: ", x)
	print("Animal: invalido")
-- OUTPUT:
Entrada:  100
AQnimal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:47:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: Tartaruga")
elif (x==5):
	print("Entrada: ", x)
	print("Animal: Garca")
elif (x==10):
	print("Entrada: ", x)
	print("Animal: Arara")
elif (x==20):
	print("Entrada: ", x)
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Entrada: ", x)
	print("Animal: Onca-pintada")
elif (x==100):
	print("Entrada: ", x)
	print("AQnimal: Garoupa")
else:
	print("Entrada: ", x)
	print("Animal: invalido")
-- EXECUTION TIME:
0.161768
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
AQnimal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:48:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: Tartaruga")
elif (x==5):
	print("Entrada: ", x)
	print("Animal: Garca")
elif (x==10):
	print("Entrada: ", x)
	print("Animal: Arara")
elif (x==20):
	print("Entrada: ", x)
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Entrada: ", x)
	print("Animal: Onca-pintada")
elif (x==100):
	print("Entrada: ", x)
	print("Animal: Garoupa")
else:
	print("Entrada: ", x)
	print("Animal: invalido")
-- EXECUTION TIME:
0.159487
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:48:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: Tartaruga")
elif (x==5):
	print("Entrada: ", x)
	print("Animal: Garca")
elif (x==10):
	print("Entrada: ", x)
	print("Animal: Arara")
elif (x==20):
	print("Entrada: ", x)
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Entrada: ", x)
	print("Animal: Onca-pintada")
elif (x==100):
	print("Entrada: ", x)
	print("Animal: Garoupa")
else:
	print("Entrada: ", x)
	print("Animal: invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:48:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: Tartaruga")
elif (x==5):
	print("Entrada: ", x)
	print("Animal: Garca")
elif (x==10):
	print("Entrada: ", x)
	print("Animal: Arara")
elif (x==20):
	print("Entrada: ", x)
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Entrada: ", x)
	print("Animal: Onca-pintada")
elif (x==100):
	print("Entrada: ", x)
	print("Animal: Garoupa")
else:
	print("Entrada: ", x)
	print("Animal: invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:49:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: Tartaruga")
elif (x==5):
	print("Entrada: ", x)
	print("Animal: Garca")
elif (x==10):
	print("Entrada: ", x)
	print("Animal: Arara")
elif (x==20):
	print("Entrada: ", x)
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Entrada: ", x)
	print("Animal: Onca-pintada")
elif (x==100):
	print("Entrada: ", x)
	print("Animal: Garoupa")
else:
	print("Entrada: ", x)
	print("Animal: invalido")
-- EXECUTION TIME:
0.289431
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:50:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: Tartaruga")
elif (x==5):
	print("Entrada: ", x)
	print("Animal: Garca")
elif (x==10):
	print("Entrada: ", x)
	print("Animal: Arara")
elif (x==20):
	print("Entrada: ", x)
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Entrada: ", x)
	print("Animal: Onca-pintada")
elif (x==100):
	print("Entrada: ", x)
	print("Animal: Garoupa")
else:
	print("Entrada: ", x)
	print("Animal: invalido")
-- EXECUTION TIME:
0.21773
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:50:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: Tartaruga")
elif (x==5):
	print("Entrada: ", x)
	print("Animal: Garca")
elif (x==10):
	print("Entrada: ", x)
	print("Animal: Arara")
elif (x==20):
	print("Entrada: ", x)
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Entrada: ", x)
	print("Animal: Onca-pintada")
elif (x==100):
	print("Entrada: ", x)
	print("Animal: Garoupa")
else:
	print("Entrada: ", x)
	print("Animal: invalido")
-- EXECUTION TIME:
0.204414
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:50:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: Tartaruga")
elif (x==5):
	print("Entrada: ", x)
	print("Animal: Garca")
elif (x==10):
	print("Entrada: ", x)
	print("Animal: Arara")
elif (x==20):
	print("Entrada: ", x)
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Entrada: ", x)
	print("Animal: Onca-pintada")
elif (x==100):
	print("Entrada: ", x)
	print("Animal: Garoupa")
else:
	print("Entrada: ", x)
	print("Animal: invalido")
-- EXECUTION TIME:
0.349492
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  50
Animal: Onca-pintada
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:50:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: Tartaruga")
elif (x==5):
	print("Entrada: ", x)
	print("Animal: Garca")
elif (x==10):
	print("Entrada: ", x)
	print("Animal: Arara")
elif (x==20):
	print("Entrada: ", x)
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Entrada: ", x)
	print("Animal: Onca-pintada")
elif (x==100):
	print("Entrada: ", x)
	print("Animal: Garoupa")
else:
	print("Entrada: ", x)
	print("Animal: invalido")
-- EXECUTION TIME:
0.352379
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  7
Animal: invalido
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  50
Animal: Onca-pintada
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:51:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: Tartaruga")
elif (x==5):
	print("Entrada: ", x)
	print("Animal: Garca")
elif (x==10):
	print("Entrada: ", x)
	print("Animal: Arara")
elif (x==20):
	print("Entrada: ", x)
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Entrada: ", x)
	print("Animal: Onca-pintada")
elif (x==100):
	print("Entrada: ", x)
	print("Animal: Garoupa")
else:
	print("Entrada: ", x)
	print("Animal: Invalido")
-- EXECUTION TIME:
0.224722
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 11:23:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: Tartaruga")
elif (x==5):
	print("Entrada: ", x)
	print("Animal: Garca")
elif (x==10):
	print("Entrada: ", x)
	print("Animal: Arara")
elif (x==20):
	print("Entrada: ", x)
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Entrada: ", x)
	print("Animal: Onca-pintada")
elif (x==100):
	print("Entrada: ", x)
	print("Animal: Garoupa")
else:
	print("Entrada: ", x)
	print("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 11:23:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("valor da cedula: "))

if (x==2):
	print("Entrada: ", x)
	print("Animal: Tartaruga")
elif (x==5):
	print("Entrada: ", x)
	print("Animal: Garca")
elif (x==10):
	print("Entrada: ", x)
	print("Animal: Arara")
elif (x==20):
	print("Entrada: ", x)
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Entrada: ", x)
	print("Animal: Onca-pintada")
elif (x==100):
	print("Entrada: ", x)
	print("Animal: Garoupa")
else:
	print("Entrada: ", x)
	print("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
